feat(layout): remove sitetitle from posts

--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 layout: default
 title: Home
 ---
+<!-- Site Title
+================================================== -->
+<div class="mainheading">
+    <h1 class="sitetitle">{{ site.name }}</h1>
+    <p class="lead">
+        {{ site.description }}
+    </p>
+</div>
 
 {% if page.url == "/" %}
 
